[gd_scene load_steps=2 format=3 uid="uid://3yigavta4fnn"]

[ext_resource type="Script" path="res://scenes/ui/full_screen_text_ui.gd" id="1_ecss0"]

[node name="FullScreenTextUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ecss0")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1280.0
offset_bottom = 800.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LevelDescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 100
text = "text here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyKeyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 35
text = "Press spacebar to start"
horizontal_alignment = 1
